[gd_scene load_steps=5 format=3 uid="uid://cketvsevbttop"]

[ext_resource type="Script" path="res://script/mob_C.gd" id="1_e40op"]
[ext_resource type="PackedScene" uid="uid://1p4tuddub1mc" path="res://characters/slime/bunnyC.tscn" id="2_rfgfp"]
[ext_resource type="AudioStream" uid="uid://cb4vrg1q2i5hp" path="res://sfx/bunny_huh.mp3" id="3_vuwc2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lwnl5"]
radius = 74.0068

[node name="Mob" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
platform_floor_layers = 0
script = ExtResource("1_e40op")

[node name="BunnyC" parent="." instance=ExtResource("2_rfgfp")]
unique_name_in_owner = true
position = Vector2(1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -39)
shape = SubResource("CircleShape2D_lwnl5")

[node name="MobsHit" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_vuwc2")
pitch_scale = 1.18
bus = &"Sfx"

[node name="MobsDeath" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_vuwc2")
volume_db = -5.0
pitch_scale = 2.1
bus = &"Sfx2"
